nambah variable name

--- a/src/Halutama.form
+++ b/src/Halutama.form
@@ -22,7 +22,6 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,5,0,0,2,-1"/>
   </AuxValues>
 
   <Layout>
@@ -248,7 +247,7 @@
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jPanel7" max="32767" attributes="0"/>
-                      <Component id="jPanel8" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jPanel8" alignment="0" pref="507" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
@@ -265,11 +264,11 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="btnlogout" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnmatkul" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnjadwal" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnberanda" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="btnmatkul" max="32767" attributes="0"/>
+                                  <Component id="btnberanda" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="btnjadwal" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="btnlogout" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace pref="46" max="32767" attributes="0"/>
                           </Group>
@@ -280,9 +279,9 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                               <Component id="btnberanda" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                               <Component id="btnjadwal" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                               <Component id="btnmatkul" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
                               <Component id="btnlogout" min="-2" max="-2" attributes="0"/>
@@ -330,33 +329,27 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Group type="102" attributes="0">
-                                          <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="lblstatus" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="lbljurusan" min="-2" max="-2" attributes="0"/>
-                                      </Group>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace max="32767" attributes="0"/>
+                                          <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="lblnama" alignment="1" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lblalamat" alignment="1" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lblnrp" alignment="1" min="-2" max="-2" attributes="0"/>
+                                              <Component id="txtstatus" min="-2" pref="202" max="-2" attributes="0"/>
+                                              <Component id="txtjurusan" min="-2" pref="202" max="-2" attributes="0"/>
+                                              <Component id="txtnama" min="-2" pref="202" max="-2" attributes="0"/>
+                                              <Component id="txtalamat" min="-2" pref="202" max="-2" attributes="0"/>
+                                              <Component id="txtnrp" min="-2" pref="202" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
-                                      <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace pref="413" max="32767" attributes="0"/>
+                                  <EmptySpace pref="232" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -365,32 +358,32 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblnama" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtnama" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblalamat" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtalamat" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblnrp" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtnrp" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lbljurusan" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtjurusan" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblstatus" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtstatus" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace pref="274" max="32767" attributes="0"/>
+                                  <EmptySpace pref="247" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -429,30 +422,15 @@
                             <Property name="text" type="java.lang.String" value="Alamat"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JLabel" name="lblnama">
-                          <Properties>
-                            <Property name="text" type="java.lang.String" value="jLabel8"/>
-                          </Properties>
+                        <Component class="javax.swing.JTextField" name="txtnama">
                         </Component>
-                        <Component class="javax.swing.JLabel" name="lblalamat">
-                          <Properties>
-                            <Property name="text" type="java.lang.String" value="jLabel8"/>
-                          </Properties>
+                        <Component class="javax.swing.JTextField" name="txtalamat">
                         </Component>
-                        <Component class="javax.swing.JLabel" name="lblnrp">
-                          <Properties>
-                            <Property name="text" type="java.lang.String" value="jLabel8"/>
-                          </Properties>
+                        <Component class="javax.swing.JTextField" name="txtnrp">
                         </Component>
-                        <Component class="javax.swing.JLabel" name="lbljurusan">
-                          <Properties>
-                            <Property name="text" type="java.lang.String" value="jLabel8"/>
-                          </Properties>
+                        <Component class="javax.swing.JTextField" name="txtjurusan">
                         </Component>
-                        <Component class="javax.swing.JLabel" name="lblstatus">
-                          <Properties>
-                            <Property name="text" type="java.lang.String" value="jLabel8"/>
-                          </Properties>
+                        <Component class="javax.swing.JTextField" name="txtstatus">
                         </Component>
                       </SubComponents>
                     </Container>
